Fix: Page now properly displays and resets when query changes